testsuite/tests/rename/should_fail/rnfail026.stderr

rnfail026.hs:16:27: error:
    The first argument of ‘Monad’ should have kind ‘* -> *’,
      but ‘Eq a => Set a’ has kind ‘*’
    In the instance declaration for ‘Monad (forall a. Eq a => Set a)’

rnfail026.hs:19:10: error:
    Illegal polymorphic or qualified type: forall a. [a]
    In the instance declaration for ‘Eq (forall a. [a])’
